--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest",
+    "watch": "jest --watch",
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -17,10 +19,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@testing-library/jest-native": "^3.1.0",
     "@testing-library/react-native": "^4.2.0",
     "babel-preset-expo": "~8.0.0",
     "jest-expo": "^36.0.1",
-    "@testing-library/jest-native": "^3.1.0",
     "react-test-renderer": "^16.12.0"
   },
   "private": true
